--- a/GAS/GAS.UI/FormView/F_HaveBack.resx
+++ b/GAS/GAS.UI/FormView/F_HaveBack.resx
@@ -117,89 +117,84 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>19, 8</value>
+  <metadata name="folderBrowserDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>26, 36</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        Qk0KBwAAAAAAADYAAAAoAAAAGQAAABcAAAABABgAAAAAAAAAAAASCwAAEgsAAAAAAAAAAAAA/f39/f39
+        /f39/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+
+        /v7+/v7+/f39APr49/f08rKYf2lUQEg6LEg6LEg6LEg6LEg6LEg6LEg6LEg6LEg6LEg6LEg6LEg6LEg6
+        LEg6LEg6LEg6LEg6LFxKOKeKbfn39v7+/gD28/Gkhmiae12OclaOclaOclaOclaOclaOclaOclaOclaO
+        claOclaOclaOclaOclaOclaOclaOclaOclaOclaOclaXeVumiWz9/f0A8+/sXEo4tZyEr5R6r5R6rpN5
+        r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6s5qBXEo4/f39APLu
+        6kg6LLGXfrCWfObe1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube
+        1rCWfLCWfEg6LP39/QDy7upIOiyzmoGzmoHo4Nno4Nno4Nno4Nno4Nno4Nno4Nno4Nno4Nno4Nno4Nno
+        4Nnk29Po4Nno4Nno4Nno4NmymYCymYBIOiz9/f0A8u7qSDostZ2FtZ2F6ODZ6ODZ6ODZ6ODZ6ODZ6ODZ
+        6ODZ6ODZ6ODZ6ODZ6ODZyrinzr6u3NHG6ODZ6ODZ6ODZtZ2FtZ2FSDos/f39APLu6kg6LLihirihiuvl
+        3+vl3+vl3+vl3+vl3+vl3+vl3+vl3+vl3+vl38e1o3xjS31kTOvl3+vl3+vl3+vl37ihirigiUg6LP39
+        /QDy7upIOiy7pY+7pY/u6eTu6eTu6eTu6eTHtaN8Y0t8Y0t8Y0vHtaPHtaN8Y0t8Y0vu6eTu6eTu6eTu
+        6eTu6eS7pY+7pY9IOiz9/f0A8u7qSDosvqmUvqmU8+/s8+/s8+/sfGNLx7Wj+vj39/Ty9PHux7WjfGNL
+        fGNL8+/s8+/s8+/s8+/s8+/s8+/svqmUvqmUSDos/f39APLu6kg6LMKumsGtmfj29Pj29Me1o8e1o/Xy
+        7/Xy7/Xy7/Xy7/Xy78e1o8e1o/j29Pj29Pj29Pj29Pj29Pj29MGtmcKumkg6LP39/QDy7upIOizFsp/F
+        sp/6+Pf6+Pd8Y0v18u/18u/18u/18u/18u/18u/18u98Y0v6+Pf6+Pf6+Pf6+Pf6+Pf6+PfFsp/Fsp9I
+        Oiz9/f0A8u7qSDosyLakyLak+vn4+vn4fGNL9fLvmHpc9fLv9fLv9fLv9fLv+ff2fGNL+vn4+vn4+vn4
+        +vn4+vn4+vn4yLakybemSDos/f39APLu6kg6LMy7q8y7q/v6+fv6+XxjS/Xy75h6XPXy7/Xy7/Xy7/Xy
+        7/r5+H1kTPv6+fv6+fv6+fv6+fv6+fv6+cu6qcy7q0g6LP39/QDy7upIOizPv7DLuqn9/f39/f3HtaPH
+        taP18u+Yelz18u/18u/18u/ItqTKuaj9/f39/f39/f39/f39/f39/f3LuqnPv7BIOiz9/f0A8u7qSDos
+        0sO1y7qp/f39/f39/f39fGNLx7Wj9fLv9fLv9fLvybemlnhb/fz8/f39/f39/f39/f39/f39/f39y7qp
+        0sO1SDos/f39APLu6kg6LNTGuMu6qf39/f39/f39/f39/ce1o3xjS3xjS39mTdDBsv7+/v39/f39/f39
+        /f39/f39/f39/f39/cu6qdTGuEg6LP39/QDy7upIOizWybzLuqn9/f39/f39/f39/f39/f39/f39/f39
+        /f39/f39/f39/f39/f39/f39/f39/f39/f39/f3LuqnWybxIOiz9/f0A8e3pSDos2czAy7qp/f39/f39
+        /f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39y7qp2czASDos/f39APLu
+        6mlUQNnNwcu6qdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLD
+        tcu6qdnNwWlUQP39/QDy7uqvlXuxl37o4Nnt5+Lt5+Lt5+Lt5+Lt5+Lt5+Lt5+Lt5+Lt5+Lt5+Lt5+Lt
+        5+Lt5+Lt5+Lt5+Lt5+Lt5+Lr5d+xl36wlnz6+fgA9PHu8Ovnr5V7aVRASDosSDosSDosSDosSDosSDos
+        SDosSDosSDosSDosSDosSDosSDosSDosSDosSDosSDosXEo4pIZo8u7q+Pb0APr5+PTx7vHt6fHs6PHs
+        6PHs6PHs6PHs6PHs6PHs6PHs6PHs6Ovl3+vl3+vl3+vl3+vl3+vl3/Hs6PHs6PHs6PHt6fLu6vTx7vr5
+        +AA=
 </value>
   </data>
-  <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        Qk0KBwAAAAAAADYAAAAoAAAAGQAAABcAAAABABgAAAAAAAAAAAASCwAAEgsAAAAAAAAAAAAA/f39/f39
+        /f39/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+
+        /v7+/v7+/f39APr49/f08rKYf2lUQEg6LEg6LEg6LEg6LEg6LEg6LEg6LEg6LEg6LEg6LEg6LEg6LEg6
+        LEg6LEg6LEg6LEg6LFxKOKeKbfn39v7+/gD28/Gkhmiae12OclaOclaOclaOclaOclaOclaOclaOclaO
+        claOclaOclaOclaOclaOclaOclaOclaOclaOclaOclaXeVumiWz9/f0A8+/sXEo4tZyEr5R6r5R6rpN5
+        r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6r5R6s5qBXEo4/f39APLu
+        6kg6LLGXfrCWfObe1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube1ube
+        1rCWfLCWfEg6LP39/QDy7upIOiyzmoGzmoHo4Nno4Nno4Nno4Nno4Nno4Nno4Nno4Nno4Nno4Nno4Nno
+        4Nnk29Po4Nno4Nno4Nno4NmymYCymYBIOiz9/f0A8u7qSDostZ2FtZ2F6ODZ6ODZ6ODZ6ODZ6ODZ6ODZ
+        6ODZ6ODZ6ODZ6ODZ6ODZyrinzr6u3NHG6ODZ6ODZ6ODZtZ2FtZ2FSDos/f39APLu6kg6LLihirihiuvl
+        3+vl3+vl3+vl3+vl3+vl3+vl3+vl3+vl3+vl38e1o3xjS31kTOvl3+vl3+vl3+vl37ihirigiUg6LP39
+        /QDy7upIOiy7pY+7pY/u6eTu6eTu6eTu6eTHtaN8Y0t8Y0t8Y0vHtaPHtaN8Y0t8Y0vu6eTu6eTu6eTu
+        6eTu6eS7pY+7pY9IOiz9/f0A8u7qSDosvqmUvqmU8+/s8+/s8+/sfGNLx7Wj+vj39/Ty9PHux7WjfGNL
+        fGNL8+/s8+/s8+/s8+/s8+/s8+/svqmUvqmUSDos/f39APLu6kg6LMKumsGtmfj29Pj29Me1o8e1o/Xy
+        7/Xy7/Xy7/Xy7/Xy78e1o8e1o/j29Pj29Pj29Pj29Pj29Pj29MGtmcKumkg6LP39/QDy7upIOizFsp/F
+        sp/6+Pf6+Pd8Y0v18u/18u/18u/18u/18u/18u/18u98Y0v6+Pf6+Pf6+Pf6+Pf6+Pf6+PfFsp/Fsp9I
+        Oiz9/f0A8u7qSDosyLakyLak+vn4+vn4fGNL9fLvmHpc9fLv9fLv9fLv9fLv+ff2fGNL+vn4+vn4+vn4
+        +vn4+vn4+vn4yLakybemSDos/f39APLu6kg6LMy7q8y7q/v6+fv6+XxjS/Xy75h6XPXy7/Xy7/Xy7/Xy
+        7/r5+H1kTPv6+fv6+fv6+fv6+fv6+fv6+cu6qcy7q0g6LP39/QDy7upIOizPv7DLuqn9/f39/f3HtaPH
+        taP18u+Yelz18u/18u/18u/ItqTKuaj9/f39/f39/f39/f39/f39/f3LuqnPv7BIOiz9/f0A8u7qSDos
+        0sO1y7qp/f39/f39/f39fGNLx7Wj9fLv9fLv9fLvybemlnhb/fz8/f39/f39/f39/f39/f39/f39y7qp
+        0sO1SDos/f39APLu6kg6LNTGuMu6qf39/f39/f39/f39/ce1o3xjS3xjS39mTdDBsv7+/v39/f39/f39
+        /f39/f39/f39/f39/cu6qdTGuEg6LP39/QDy7upIOizWybzLuqn9/f39/f39/f39/f39/f39/f39/f39
+        /f39/f39/f39/f39/f39/f39/f39/f39/f39/f3LuqnWybxIOiz9/f0A8e3pSDos2czAy7qp/f39/f39
+        /f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39y7qp2czASDos/f39APLu
+        6mlUQNnNwcu6qdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLDtdLD
+        tcu6qdnNwWlUQP39/QDy7uqvlXuxl37o4Nnt5+Lt5+Lt5+Lt5+Lt5+Lt5+Lt5+Lt5+Lt5+Lt5+Lt5+Lt
+        5+Lt5+Lt5+Lt5+Lt5+Lt5+Lr5d+xl36wlnz6+fgA9PHu8Ovnr5V7aVRASDosSDosSDosSDosSDosSDos
+        SDosSDosSDosSDosSDosSDosSDosSDosSDosSDosSDosXEo4pIZo8u7q+Pb0APr5+PTx7vHt6fHs6PHs
+        6PHs6PHs6PHs6PHs6PHs6PHs6PHs6Ovl3+vl3+vl3+vl3+vl3+vl3/Hs6PHs6PHs6PHt6fLu6vTx7vr5
+        +AA=
 </value>
   </data>
-  <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="toolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="toolStripButton5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
-</value>
-  </data>
+  <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>206, 36</value>
+  </metadata>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </metadata>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>39</value>
   </metadata>
 </root>
